--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "ipfshttpclient>=0.7.0",
     "py-ecc>=8.0.0",
     "pydantic>=2.11.5",
+    "pytest>=8.4.1",
     "web3>=7.12.0",
 ]
