--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@
 /artifacts/
 /cache/
 /node_modules/
+/src/blocka2a/__pycache__/
+/src/blocka2a/clients/__pycache__/
+/src/blocka2a/contracts/__pycache__/
+/src/blocka2a/utils/__pycache__/
+/src/__pycache__/
+/tests/__pycache__/
+/tests/clients/__pycache__/
+/tests/contracts/__pycache__/
+/tests/utils/__pycache__/
